@@ -342,8 +342,8 @@ static struct FeatureDesc {
   F_I(MAXCHANNELSPERUSER, 0, 20, 0),
   F_I(NICKLEN, 0, 15, 0),
   F_I(AVBANLEN, 0, 40, 0),
-  F_I(MAXBANS, 0, 45, 0),
-  F_I(MAXSILES, 0, 15, 0),
+  F_I(MAXBANS, 0, 50, 0),
+  F_I(MAXSILES, 0, 25, 0),
   F_I(HANGONGOODLINK, 0, 300, 0),
   F_I(HANGONRETRYDELAY, 0, 10, 0),
   F_I(CONNECTTIMEOUT, 0, 60, 0),
